--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tudo Sobre Google Glass</title>
-    <link rel="stylesheet" href="_css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     
 </head>
 
- <script src="_javascript/funcoes.js"></script>
+ <script src="javascript/funcoes.js"></script>
 
 <body>
     <div id="interface">
@@ -18,16 +18,16 @@
     <h2>A revolução do Google está chegando</h2>
         </hgroup>
 
-    <img id="icone" src="_imagens/glass-oculos-preto-peq.png">
+    <img id="icone" src="imagens/glass-oculos-preto-peq.png">
 
     <nav id="menu">
     <h1>Menu Principal</h1>
     <ul type="disc">
-        <li onmousemove="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
-        <li  onmousemove="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
-        <li  onmousemove="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
-        <li  onmousemove="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>       
-        <li  onmousemove="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href ="fale-conosco.html">Fale conosco</a></li>
+        <li onmousemove="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+        <li  onmousemove="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+        <li  onmousemove="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+        <li  onmousemove="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>       
+        <li  onmousemove="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/glass-oculos-preto-peq.png')"><a href ="fale-conosco.html">Fale conosco</a></li>
     </ul>
     </nav>
     </header>
