--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
     <figure class="foto-legenda">
-    <img src="_imagens/glass-quadro-homem-mulher.jpg"/>
+    <img src="imagens/glass-quadro-homem-mulher.jpg"/>
     <figcaption>
 
         <h1>Google Glass</h1>
@@ -81,7 +81,7 @@
     <h2>O que você pode fazer com o Google Glasses</h2>
     <p>vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-    <video id="filme"controls controls="" src="_media/one-day.mp4">
+    <video id="filme"controls controls="" src="media/one-day.mp4">
 
     </video>
 </article>
@@ -91,7 +91,7 @@
  <h1>Outras Notícias</h1>
  <h2>Vídeo mais recente</h2>
 
- <video id="filme2"controls controls="" src="_media/how-it-feels.mp4">
+ <video id="filme2"controls controls="" src="media/how-it-feels.mp4">
 
  </video>
 
